cmake_minimum_required(VERSION 3.17)
project(second_lab1_sem3)

set(CMAKE_CXX_STANDARD 20)

add_executable(second_lab1_sem3 main.cpp Option.hpp Sequence.hpp ArraySequence.hpp DynamicArray.hpp Sorter.hpp LinkedList.hpp ListSequence.hpp ISorter.hpp HeapSorter.hpp ArrayTest.hpp ListTest.hpp Exceptions.hpp ShellSorter.hpp SortTests.hpp Interface.hpp)